2004-12-07	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c, terminal/terminal-options.c,
	  terminal/main.c: Use -T as shortcut for --title. -t is
	  still supported for compatibility with gnome-terminal.

2004-12-06	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Users can open only one preferences
	  dialog per terminal window. This fixes bug #27.

2004-12-04	Benedikt Meurer <benny@xfce.org>

	* doc/C/: Fix link.

2004-12-03	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c, terminal/terminal-options.h,
	  terminal/terminal-window.c, terminal/terminal-window.h,
	  terminal/terminal-app.c, terminal/main.c, doc/C/faq.html,
	  doc/C/Terminal.xml, doc/C/advanced.html: Added command line option
	  --fullscreen to put a window into fullscreen mode.
	* terminal/terminal-screen.c: Display an error if Terminal is
	  unable to determine the users login shell.
	* configure.ac, NEWS: Bump version to 0.2.1svn. Bump D-BUS interface
	  version to 2.

2004-12-03	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Depend on vte 0.11.11, since AntiAlias API isn't
	  available in earlier versions.

2004-12-02	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-app.c(terminal_app_try_invoke): Always set
	  error when returning FALSE.
	* doc/C/: Updated online documentation.
	* po/: Updated translations.
	* configure.ac, NEWS: Version 0.2.0, depends on latest libexo 0.2.0.

2004-11-29	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c, terminal/terminal-widget.c: Setup
	  background in _init() instead of _map() to avoid flickering on
	  startup. Delay execution of the child command until all windows
	  are setup properly and the application becomes idle. These
	  fixes together should give a smoother and probably faster
	  startup.

2004-11-29	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c, terminal/terminal-shortcut-editor.c,
	  terminal/terminal-preferences.c, terminal/terminal-image-loader.c: