@@ -1,3 +1,10 @@
+2004-12-08	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-app.c(terminal_app_find_screen): Fix to open
+	  remote displays properly.
+	* terminal/terminal-shortcut-editor.c: Strip off invalid modifiers
+	  when the user enters a shortcut. This fixes bug #26.
+
 2004-12-07	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-screen.c, terminal/terminal-options.c,
